[gd_scene load_steps=22 format=3 uid="uid://fj2c6cebl8pk"]

[ext_resource type="Script" uid="uid://cplymo30m4t22" path="res://Games/flappy_bird/Scripts/flappy_main.gd" id="1_ahv5j"]
[ext_resource type="PackedScene" uid="uid://cd76jpqxb0eqo" path="res://Games/flappy_bird/Scenes/ground.tscn" id="2_lkjn6"]
[ext_resource type="Texture2D" uid="uid://c04jveo8e7lmn" path="res://Assets/Background/chirag-vijay-environment.jpg" id="2_qkajw"]
[ext_resource type="Script" uid="uid://slnssvf31hcb" path="res://Games/flappy_bird/Scripts/ground.gd" id="3_i4a5s"]
[ext_resource type="PackedScene" uid="uid://wvw586u8r01h" path="res://Games/flappy_bird/Scenes/bird.tscn" id="4_ye8y1"]
[ext_resource type="Script" uid="uid://beumoolioq1b2" path="res://Games/flappy_bird/Scripts/pilot.gd" id="5_fuths"]
[ext_resource type="Texture2D" uid="uid://uoq3jhwpvq60" path="res://Assets/Plane/Fly (1).png" id="6_sq106"]
[ext_resource type="Texture2D" uid="uid://fn3psom18nnv" path="res://Assets/health_and_pointers_bar/Sprites/Heart Bar/Heart Stage 1.png" id="7_60dfc"]
[ext_resource type="FontFile" uid="uid://bnbrhy3ui4hcs" path="res://Games/Jumpify/art/ui/fonts/Bungee-Regular.ttf" id="7_jtf2p"]
[ext_resource type="Texture2D" uid="uid://co33yn52kaeqb" path="res://Assets/health_and_pointers_bar/Sprites/Heart Bar/Heart Stage 5.png" id="8_oja8t"]
[ext_resource type="PackedScene" uid="uid://7nr2tlykv2n5" path="res://Games/flappy_bird/Scenes/game_over.tscn" id="9_wgnds"]
[ext_resource type="Script" uid="uid://nqypnx6hl2qj" path="res://Games/flappy_bird/Scripts/timer_label.gd" id="10_7qyl5"]
[ext_resource type="Texture2D" uid="uid://5ows6ytbrmdg" path="res://Assets/scoring_system/Background.png" id="11_hp4h5"]
[ext_resource type="Theme" uid="uid://b07twninll6cv" path="res://addons/new_theme.tres" id="12_0goge"]
[ext_resource type="Texture2D" uid="uid://b1ifscbhf76bo" path="res://Assets/scoring_system/medal.webp" id="13_8iopb"]
[ext_resource type="Texture2D" uid="uid://h2ss1trfuva0" path="res://Assets/flappy_assets/bg.png" id="16_m56p3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovamc"]
bg_color = Color(0.254902, 0.752941, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywesg"]
bg_color = Color(0.857629, 0.665457, 0.907348, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.811725, 0.27799, 0.590984, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6kp5"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_oy1mx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_oja8t")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_60dfc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lyy77"]
texture = ExtResource("11_hp4h5")

[node name="FlappyMain" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ahv5j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -184.0
offset_top = -183.0
offset_right = 1336.0
offset_bottom = 849.0
texture = ExtResource("2_qkajw")

[node name="ground" parent="." instance=ExtResource("2_lkjn6")]
z_index = 1
position = Vector2(-189, 659)
script = ExtResource("3_i4a5s")

[node name="pilot" parent="." instance=ExtResource("4_ye8y1")]
position = Vector2(96, 327)
scale = Vector2(2, 2)
script = ExtResource("5_fuths")

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="logout" type="Button" parent="."]
z_index = 12
layout_mode = 0
offset_left = 7.0
offset_top = 570.0
offset_right = 101.0
offset_bottom = 606.0
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "⬅️ logout
"

[node name="ScoreBoard" type="Panel" parent="."]
visible = false
z_index = 11
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 886.0
offset_top = 179.0
offset_right = 1114.0
offset_bottom = 243.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ovamc")

[node name="Health" type="Panel" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 911.0
offset_top = 13.0
offset_right = 1137.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ywesg")

[node name="ApplePic" type="Panel" parent="Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -25.0
offset_right = 57.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c6kp5")

[node name="TextureRect" type="TextureRect" parent="Health/ApplePic"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_60dfc")
expand_mode = 3

[node name="heart1" type="AnimatedSprite2D" parent="Health"]
position = Vector2(85, 35)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_oy1mx")
animation = &"Dead"
autoplay = "default"

[node name="heart2" type="AnimatedSprite2D" parent="Health"]
position = Vector2(134, 35)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_oy1mx")
animation = &"Dead"
autoplay = "default"

[node name="heart3" type="AnimatedSprite2D" parent="Health"]
position = Vector2(184, 34)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_oy1mx")
animation = &"Dead"
autoplay = "default"

[node name="GameOver" parent="." instance=ExtResource("9_wgnds")]
visible = false

[node name="AdaptRom" type="CheckButton" parent="."]
z_index = 13
layout_mode = 0
offset_left = 497.0
offset_top = 11.0
offset_right = 681.0
offset_bottom = 46.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 20
text = "Adapt PROM"
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("10_7qyl5")

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 18.0
offset_top = 11.0
offset_right = 161.0
offset_bottom = 55.0

[node name="TimerSelectorPanel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 392.0
offset_top = 183.0
offset_right = 744.0
offset_bottom = 484.0
theme_override_styles/panel = SubResource("StyleBoxTexture_lyy77")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TimerSelectorPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -103.0
offset_right = 157.5
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 125

[node name="Label" type="Label" parent="CanvasLayer/TimerSelectorPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7065, 0.126, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 25
text = "SET TIME TO PLAY !"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TimerSelectorPanel/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/TimerSelectorPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "    Play Game    "

[node name="CloseButton" type="Button" parent="CanvasLayer/TimerSelectorPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "   Close   "

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TimerSelectorPanel"]
layout_mode = 0
offset_left = 218.0
offset_top = 117.0
offset_right = 317.0
offset_bottom = 156.0

[node name="AddOneButton" type="Button" parent="CanvasLayer/TimerSelectorPanel/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "  +1  "

[node name="AddFiveButton" type="Button" parent="CanvasLayer/TimerSelectorPanel/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "  +5  "

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/TimerSelectorPanel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 44.0
offset_top = 117.0
offset_right = 140.0
offset_bottom = 157.0

[node name="SubOneButton" type="Button" parent="CanvasLayer/TimerSelectorPanel/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "  -1  "

[node name="SubFiveButton" type="Button" parent="CanvasLayer/TimerSelectorPanel/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "  -5  "

[node name="TimeSelector" type="Label" parent="CanvasLayer/TimerSelectorPanel"]
offset_left = 152.0
offset_top = 123.0
offset_right = 195.0
offset_bottom = 156.0
theme = ExtResource("12_0goge")
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 20
text = "0 m"

[node name="CountdownTimer" type="Timer" parent="CanvasLayer"]

[node name="CountdownLabel" type="Label" parent="CanvasLayer/CountdownTimer"]
offset_left = 474.0
offset_top = 47.0
offset_right = 666.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 25
text = "Time left:"

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 496.0
offset_top = 272.0
offset_right = 684.0
offset_bottom = 314.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.914062, 0.914062, 0.914062, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "GAME OVER !"

[node name="LogoutButton" type="Button" parent="CanvasLayer/GameOverLabel"]
layout_mode = 0
offset_left = -17.0
offset_top = 56.0
offset_right = 81.0
offset_bottom = 95.0
text = "⬅️ Logout"

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverLabel"]
layout_mode = 0
offset_left = 104.0
offset_top = 56.0
offset_right = 208.0
offset_bottom = 95.0
text = "🔄:Retry"

[node name="PauseButton" type="Button" parent="CanvasLayer"]
offset_left = 567.0
offset_top = 575.0
offset_right = 640.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "Pause"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 228.0
offset_top = 11.0
offset_right = 293.0
offset_bottom = 83.0
texture = ExtResource("13_8iopb")
expand_mode = 1

[node name="TopScoreLabel" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 49.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("7_jtf2p")
horizontal_alignment = 1

[node name="ApplePic" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = 19.0
offset_right = 81.0
offset_bottom = 72.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c6kp5")

[node name="TextureRect" type="TextureRect" parent="ApplePic"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 2.0
offset_right = 10.3442
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_sq106")
expand_mode = 3

[node name="ScoreLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.557
anchor_bottom = 0.5
offset_left = 107.0
offset_top = 26.0
offset_right = 192.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 25
text = "Score"

[node name="Score" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 204.0
offset_top = 26.0
offset_right = 252.0
offset_bottom = 61.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="ModeSelection" type="TextureRect" parent="."]
offset_left = 453.0
offset_top = 274.0
offset_right = 674.0
offset_bottom = 400.0
texture = ExtResource("16_m56p3")
expand_mode = 1

[node name="Label" type="Label" parent="ModeSelection"]
layout_mode = 0
offset_left = 16.0
offset_top = 21.0
offset_right = 210.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0.197937, 0.197937, 0.197937, 1)
theme_override_fonts/font = ExtResource("7_jtf2p")
theme_override_font_sizes/font_size = 25
text = "Select mode !"

[node name="2D_mode" type="Button" parent="ModeSelection"]
layout_mode = 0
offset_left = 33.0
offset_top = 69.0
offset_right = 96.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "2D"

[node name="3D_mode" type="Button" parent="ModeSelection"]
layout_mode = 0
offset_left = 116.0
offset_top = 69.0
offset_right = 181.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("7_jtf2p")
text = "3D"

[connection signal="area_entered" from="ground" to="ground" method="_on_area_entered"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="pressed" from="logout" to="." method="_on_logout_pressed"]
[connection signal="toggled" from="AdaptRom" to="pilot" method="_on_adapt_rom_toggled"]
[connection signal="pressed" from="ModeSelection/2D_mode" to="." method="_on_2d_mode_pressed"]
[connection signal="pressed" from="ModeSelection/3D_mode" to="." method="_on_3d_mode_pressed"]
